# note-app

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build.yml
apps/cli/: Cargo.toml
apps/cli/src/: commands.rs  main.rs
apps/gui/: index.html  package.json  playwright.config.ts
apps/gui/e2e/: app-smoke.spec.ts
apps/gui/src/: App.tsx  tauri.ts
apps/gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/gui/src-tauri/capabilities/: default.json
apps/gui/src-tauri/icons/: icon.icns
apps/gui/src-tauri/src/: lib.rs  main.rs
apps/gui/src/components/: AiPanel.tsx  AttachmentPanel.tsx  CaptureDialog.tsx  CreateNoteDialog.tsx  GraphView.tsx  InboxView.tsx  NoteEditorView.tsx  NotesView.tsx  SearchView.tsx  Sidebar.tsx  Topbar.tsx
apps/gui/src/i18n/: index.ts  locales.ts
apps/gui/src/styles/: global.css  tokens.css
crates/ai-gateway/: Cargo.toml
crates/ai-gateway/src/: lib.rs  provider.rs  service.rs
crates/core/: Cargo.toml
crates/core/src/: ai_policy.rs  error.rs  lib.rs  model.rs  service.rs
crates/core/src/model/: alias.rs  attachment.rs  block.rs  link.rs  note.rs  notebook.rs  search.rs  tag.rs  template.rs  workspace.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  migration.rs  sqlite.rs
crates/storage/tests/: integration.rs
docs/: AI_POLICY.md  ARCHITECTURE.md  CODE_REVIEW_FOR_CLAUDE.md  DOCUMENT_MODEL.md  PRD.md
