[workspace]
resolver = "2"
members = [
    "apps/cli",
    "apps/gui/src-tauri",
    "crates/core",
    "crates/storage",
    "crates/ai-gateway",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/lsq/note-app"

[workspace.dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"

# Storage
rusqlite = { version = "0.34", features = ["bundled", "modern_sqlite"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
tabled = "0.18"

# Async
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
