[package]
name = "note-ai-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
note-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { workspace = true }
tracing = { workspace = true }
